--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-		<title>37signals: Web-based collaboration apps for big business</title>	
+		<title>37signals: Web-based collaboration apps for big business only</title>	
 		<link rel="icon" type="image/ico" href="favicon.ico" />
 		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type ="text/css" href="css/style.css" />
